fix breaking layout on small screens

--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -16,6 +16,10 @@ body {
 h1, h2, h3 {
     font-size: 2rem;
     font-weight: normal;
+
+    @media (max-width: @breakPointM) {
+        hyphens: auto;
+    }
 }
 
 a {
